--- a/test2.html
+++ b/test2.html
@@ -1,1 +1,39 @@
+<html>
 
+<head>
+    <title> "Test2" </title>
+<style>
+    p {color: cornsilk;}
+    body {background-color: rgb(163, 241, 238);}
+    title {background-color: cornflowerblue;}
+    body {font-family:Verdana, Geneva, Tahoma, sans-serif}
+    head {font-family: Verdana, Geneva, Tahoma, sans-serif;}
+    head {background-color: rgb(163, 241, 238)
+    
+</style>
+
+
+</head>
+
+<body>
+  Thank you.
+
+    <div>
+      Thanks for the hand sanitizer.  
+    </div>
+    <p>
+        Beware
+        Every
+        Human
+        Is
+        Not
+        Disciplined.
+
+        Look around. the COMPUTER, the TABLE, the KEYBOARD.
+
+        HINT: the caps of the first sentence
+
+    </p>
+</body>
+
+</html>
